# Automatic-Bargain-Hunting

./: CMakeLists.txt  LICENSE  README.md  Test.txt  test2.c
src/: Composition.c  Data_collection.c  data_collection.c  functions.c  main.c  price_comparison.c  user_input.c
src/Data/: Varedata.txt  Varer.txt
src/Headers/: Comparison.h  Composition.h  Data_collection.h  Function.h  data_collection.h  price_comparison.h  user_input.h
